<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/light_gray">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:padding="20dp">

		<ImageView android:layout_width="96dp"
			android:layout_height="96dp" android:layout_gravity="center_horizontal"
			android:src="@drawable/icon" />

		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
			android:layout_marginTop="20dp" android:text="@string/extension_name"
			android:textStyle="bold" android:textColor="#333" android:textSize="18sp" />

		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
			android:text="@string/ttrss_welcome" android:textColor="#333" android:autoLink="web"
			android:layout_marginBottom="5dp" />
		
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
			android:text="@string/ttrss_note" android:textColor="#333" android:autoLink="web"
			android:layout_marginBottom="5dp" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:layout_marginTop="5dp" android:layout_marginBottom="5dp">

			<Button android:id="@+id/btn_ok" android:layout_height="wrap_content"
				android:layout_width="0dp" android:layout_weight="1" android:enabled="false" />

		</LinearLayout>

	</LinearLayout>

</ScrollView>
